--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^2.19.0",
+    "execa": "^5.0.0",
     "inquirer": "^6.2.2"
   },
   "keywords": [
