--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^2.19.0",
+    "download-git-repo": "^3.0.2",
     "execa": "^5.0.0",
+    "fs-extra": "^9.0.1",
     "inquirer": "^6.2.2"
   },
   "keywords": [
@@ -20,7 +22,7 @@
     "template"
   ],
   "bin": {
-    "cgone-template": "bin/select-template.js"
+    "cgone": "bin/cgone.js"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0"
