feat: 添加文档指南

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "keywords": [
     "cli",
     "select",
-    "template"
+    "template",
+    "deploy"
   ],
   "bin": {
     "cgone": "bin/cgone.js"
