--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "download-git-repo": "^3.0.2",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.1",
-    "inquirer": "^6.2.2"
+    "inquirer": "^6.2.2",
+    "node-ssh": "^11.1.1"
   },
   "keywords": [
     "cli",
