--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "城管应用开发一部项目模版搭建脚手架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "wujc",
   "license": "ISC",
