feat: 修改公网配置

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "vw-app": {
-    "repository": "ssh://git@git.citycloud.com.cn:3022/cgyykf-one/vue-app-vw-template.git",
+    "repository": "https://github.com/actualchao/vue-preset-h5-VW-template.git",
     "description": "this is a app template width VW Adaptive solution"
   }
 }
