--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "chao-cli",
+  "name": "wujc-cli",
   "version": "1.0.0",
   "description": "模版搭建脚手架",
   "main": "index.js",
-  "scripts": {
-    "build": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "wujc",
-  "license": "ISC",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/actualchao/chao-cli.git"
+  },
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^2.19.0",
